test/fails/bad_casts/as1.lgl
void main() {
    vec4 v = [1., 2., 3., 4.];
    vec3 fail = v as vec3; // Not a subtype
}